--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <ul id="todo-list">
         <li class="todo-item">
             <input class="checkbox" type="checkbox">
-            <label class="title">Изучить JavaScript</label>
+            <label class="title">Learn JavaScript</label>
             <input class="textfield" type="text">
-            <button class="edit">Изменить</button>
-            <button class="delete">Удалить</button>
+            <button class="edit">Edit</button>
+            <button class="delete">Delete</button>
         </li>
     </ul>
 
     <form id="todo-form">
         <input id="add-input" type="text">
-        <button id="add-button" type="submit">Добавить</button>
+        <button id="add-button" type="submit">Add</button>
     </form>
 </main>
 
